# pentdem

./: .env.example  .gitignore  PLAN-AI-PENTESTING-DAEMON.md  README.md  STATUS.md  cli.py  concurrent_hunt.py  models.py  pipeline.py  pyproject.toml  setup.py  test_server.py  verifier.py  wordlist_memory.db
.memory/: test_com.json
.sessions/: 0a8e3d34afae.json
agents/: __main__.py  autonomous.py
pentdem/: __init__.py
skills/: adversarial_validation.py  auth_broker.py  auth_detect.py  base.py  capability_ledger.py  evidence.py  proxy_manager.py  quality_gate.py  race_condition.py  real_tools.py  reflection_context.py  report_writer.py  scope_guard.py  screenshot.py  session_manager.py  ship_gate.py  waf_bypass.py
skills/data/: pentest.db  session_20260707_093924.json  session_20260707_094209.json  session_20260707_094557.json  session_20260707_094827.json  session_20260707_094919.json  session_20260707_095242.json  session_20260707_100147.json  session_20260707_100602.json  session_20260707_101442.json  session_20260707_101822.json
skills/hunt/: __init__.py
skills/recon/: __init__.py
skills/validate/: __init__.py
tests/: test_validation_gates.py
tools/: __init__.py
