[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pentdem"
version = "1.5.0"
description = "Autonomous AI Bug Hunting Engine — recon, hunt, exploit, report in one command"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PENTDEM"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    "openai>=1.60.0",
    "anthropic>=0.49.0",
    "python-dotenv>=1.1.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
pentdem = "pentdem:main_cli"

[tool.setuptools.packages.find]
include = ["pentdem*", "agents*", "skills*", "mcp*", "data*", "reports*", "evidence*", "claude_skills*", "tools*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.txt", "*.json", "*.yaml", "*.yml", "*.db"]
